--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.imgg1{height: 100px;
-width: 100px;}
+/* .imgg1{height: 100px;
+width: 100px;} */
 
 .navbar-brand {
     margin-left: 50px;
@@ -33,7 +33,7 @@ width: 100px;}
 }
 .navbar-nav {
     position: relative;
-    margin-left: 350px;
+    /* margin-left: 350px; */
     font-size: 20px;
     font-weight: bolder;
 }
@@ -54,7 +54,21 @@ img{
 .headd
 {
     position: relative;
-    left: 250px;
+    /* left: 170px; */
+    /* padding-left: 200px; */
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    -webkit-text-stroke: 2px;
 }
-
+.hed2
+{
+    font-size: 40px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    -webkit-text-stroke: 2px;
+}
+.ifr{
+    height: fit-content;
+}
+a{text-decoration: none;
+color: aliceblue;
+display: flex;
+line-height: 30px;}
